tests/snapshots/render/dumb@commonmark-spec-257-list_items.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/257-list_items.md
snapshot_kind: text
---
• one

╭──────────────────────────────────────────────────────────────────────────────╮
│  two                                                                         │
╰──────────────────────────────────────────────────────────────────────────────╯
