tests/snapshots/render/dumb@commonmark-spec-259-list_items.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/259-list_items.md
snapshot_kind: text
---
▌ ▌  1. one

        two
